--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
                 <td><a href="TechnoTip.html">מאגר הטכנוטיפים</a></td>
             </tr>												
             <tr>
+                <td><a href="Keep-TechnoTip-Admin.html">ניהול מאגר הטכנוטיפים</a></td>
+            </tr>															
+            <tr>
+                <td><a href="Calendar-Creator.html">יוצר קישורים לאירועים</a></td>
+            </tr>												
+            <tr>
                 <td><a href="JSON-to-Text.html">ממיר JSON לטקסט, עבור Logseq</a></td>
             </tr>												
             <tr>
