--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
                 <td><a href="Calendar-Creator.html">יוצר קישורים לאירועים</a></td>
             </tr>												
             <tr>
+                <td><a href="Skills.html">שאלון כישורים</a></td>
+            </tr>												
+            <tr>
+                <td><a href="Skills-Analize.html">ניתוח שאלון כישורים/a></td>
+            </tr>															
+            <tr>
                 <td><a href="JSON-to-Text.html">ממיר JSON לטקסט, עבור Logseq</a></td>
             </tr>												
             <tr>
