--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <td><a href="Skills.html">שאלון כישורים</a></td>
             </tr>												
             <tr>
-                <td><a href="Skills-Analize.html">ניתוח שאלון כישורים/a></td>
+                <td><a href="Skills-Analize.html">ניתוח שאלון כישורים</a></td>
             </tr>															
             <tr>
                 <td><a href="JSON-to-Text.html">ממיר JSON לטקסט, עבור Logseq</a></td>
