--- a/Skills.html
+++ b/Skills.html
@@ -125,7 +125,7 @@
                     <i class="fas fa-user text-blue-600"></i>
                     <h2 class="font-bold text-sm uppercase tracking-wide">פרטי המוערכת</h2>
                 </div>
-                <label for="evaluatee-name" class="block text-xs font-medium text-blue-600 mb-1">שם המוערכת (יעדכן את השאלות):</label>
+                <label for="evaluatee-name" class="block text-xs font-medium text-blue-600 mb-1">שם המוערכ/ת:</label>
                 <input type="text" id="evaluatee-name" placeholder="על מי המשוב?" 
                     class="w-full px-3 py-2 bg-white border border-blue-200 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition-colors">
             </div>
@@ -134,11 +134,11 @@
         <!-- Instructions -->
         <div class="bg-white rounded-lg p-4 mb-6 shadow-sm border border-gray-100 text-sm text-gray-600">
             <p>
-                בשאלון זה הנכם מתבקשים לתת משוב למוערכת לגבי 16 כישורים בין אישיים שלה, המחולקים ל-3 קטגוריות. אנא קראו את כלל ההיגדים לפני שתתחילו להשיב ולאחר מכן בחרו 
+                בשאלון זה הנכם מתבקשים לתת משוב למוערכ/ת לגבי 16 כישורים בין אישיים שלו/ה, המחולקים ל-3 קטגוריות. אנא קראו את כלל ההיגדים לפני שתתחילו להשיב ולאחר מכן בחרו 
                 <span class="font-bold text-green-700">3-5 תחומים לשימור (חוזקות)</span> 
                 ו-
                 <span class="font-bold text-red-700">3-5 תחומים לשיפור</span>
-                אצל המוערכת.
+                אצל המוערכ/ת.
             </p>
         </div>
 
@@ -153,7 +153,7 @@
             <div class="bg-white rounded-xl shadow-sm p-6 border-t-4 border-gray-400">
                 <h3 class="text-lg font-bold text-gray-800 mb-2">התנהגויות נוספות</h3>
                 <p class="text-sm text-gray-500 mb-3">
-                    במידה ויש לך דברים נוספים לציין לגבי האופן בו <span class="name-display">המוערכת</span> מתייחסת לאחרים, שלא הופיע בשאלות הקודמות - אנא פרט/י
+                    במידה ויש לך דברים נוספים לציין לגבי האופן בו <span class="name-display">המוערכ/ת</span> מתייחס/ת לאחרים, שלא הופיע בשאלות הקודמות - אנא פרט/י
                 </p>
                 <textarea id="free-text" rows="3" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none"></textarea>
             </div>
@@ -161,7 +161,7 @@
             <div class="bg-indigo-50 rounded-xl shadow-sm p-6 border-t-4 border-indigo-400">
                 <h3 class="text-lg font-bold text-indigo-900 mb-2">איכות מיוחדת</h3>
                 <p class="text-sm text-indigo-700 mb-3">
-                    כאשר <span class="name-display">היא</span> במיטבה, איזו איכות מיוחדת, אנרגיה או ערך מוסף היא מביאה איתה 'לחדר'? מהו הדבר האחד שחסר כאשר היא לא שם, ושמבדיל אותה מאנשים אחרים?
+                    כאשר <span class="name-display">היא</span> במיטבו/ה, איזו איכות מיוחדת, אנרגיה או ערך מוסף הוא/היא מביאה איתה 'לחדר'? מהו הדבר האחד שחסר כאשר הוא/היא לא שם, ושמבדיל אותו/ה מאנשים אחרים?
                 </p>
                 <textarea id="q-special-quality" rows="3" class="w-full px-4 py-3 border border-indigo-200 rounded-lg focus:ring-2 focus:ring-indigo-500 outline-none"></textarea>
             </div>
@@ -169,7 +169,7 @@
             <div class="bg-purple-50 rounded-xl shadow-sm p-6 border-t-4 border-purple-400">
                 <h3 class="text-lg font-bold text-purple-900 mb-2">חסמים ופוטנציאל</h3>
                 <p class="text-sm text-purple-700 mb-3">
-                    מה לדעתך עשוי לעכב או למנוע ממנה לממש את מלוא הפוטנציאל המקצועי שלה? (האם יש דפוס התנהגות, פחד או הרגל שכדאי לה להיות מודעת אליו ולעבוד עליו?)
+                    מה לדעתך עשוי לעכב או למנוע ממנו/ה לממש את מלוא הפוטנציאל המקצועי שלו/ה? (האם יש דפוס התנהגות, פחד או הרגל שכדאי לו/לה להיות מודעים אליו ולעבוד עליו?)
                 </p>
                 <textarea id="q-barriers" rows="3" class="w-full px-4 py-3 border border-purple-200 rounded-lg focus:ring-2 focus:ring-purple-500 outline-none"></textarea>
             </div>
@@ -177,7 +177,7 @@
             <div class="bg-green-50 rounded-xl shadow-sm p-6 border-t-4 border-green-400">
                 <h3 class="text-lg font-bold text-green-900 mb-2">תפקיד החלומות</h3>
                 <p class="text-sm text-green-700 mb-3">
-                    אם הייתה לך אפשרות לשבץ אותה בכל תפקיד, סביבת עבודה או עיסוק בעולם, ללא מגבלות של כסף או ניסיון – איפה הכי טבעי ונכון לה להיות? באיזה תפקיד העיניים שלה ינצצו?
+                    אם הייתה לך אפשרות לשבץ אותו/ה בכל תפקיד, סביבת עבודה או עיסוק בעולם, ללא מגבלות של כסף או ניסיון – איפה הכי טבעי ונכון לו/לה להיות? באיזה תפקיד העיניים שלו/שלה ינצצו?
                 </p>
                 <textarea id="q-dream-role" rows="3" class="w-full px-4 py-3 border border-green-200 rounded-lg focus:ring-2 focus:ring-green-500 outline-none"></textarea>
             </div>
@@ -303,13 +303,13 @@
                 title: 'קטגוריה 1: להיות עצמך באופן מלא',
                 color: 'blue',
                 items: [
-                    { id: 'emotions', title: 'זיהוי והבעת מגוון רגשות', desc: 'האם <span class="name-display">היא</span> מזהה ומביעה מגוון רגשות? האם יש רגשות שקשה לה להביע (חיוביים, שליליים, פגיעות)?' },
-                    { id: 'aspects', title: 'ביטוי היבטים שונים של העצמי', desc: 'עד כמה <span class="name-display">היא</span> מאפשרת לעצמה להביא את עצמה כמו שהיא, לעומת הצגת תדמית?' },
-                    { id: 'acceptance', title: 'קבלה עצמית', desc: 'האם יש חלקים בעצמה שקשה לה לקבל? האם <span class="name-display">היא</span> חשה בושה לגביהם?' },
-                    { id: 'intuition', title: 'אמון באינטואיציה', desc: 'האם <span class="name-display">היא</span> נוטה להיות אנליטית מדי ולזלזל בתחושות הבטן שלה? האם יש לה ספק עצמי רב?' },
-                    { id: 'needs', title: 'מילוי הצרכים האישיים', desc: 'עד כמה <span class="name-display">היא</span> מכבדת את הצרכים שלה, או נוטה "לוותר עליהם" כשהם מתנגשים עם רצון אחרים? האם <span class="name-display">היא</span> מתקשרת את הצרכים שלה או יודעת לשים גבולות לאחרים?' },
-                    { id: 'direct', title: 'תקשורת ישירה והלימה', desc: 'האם <span class="name-display">היא</span> מתקשרת באופן פתוח ותואם, או שולחת מסרים כפולים (למשל, חיוך בעת כעס)?' },
-                    { id: 'approval', title: 'צורך באישור', desc: 'עד כמה הצורך שלה בקבלה ואישור חזק עד כדי כך ש<span class="name-display">היא</span> "מוותרת על עצמה"?' }
+                    { id: 'emotions', title: 'זיהוי והבעת מגוון רגשות', desc: 'האם <span class="name-display">היא</span> מזהה ומביע/ה מגוון רגשות? האם יש רגשות שקשה לו/לה להביע (חיוביים, שליליים, פגיעות)?' },
+                    { id: 'aspects', title: 'ביטוי היבטים שונים של העצמי', desc: 'עד כמה <span class="name-display">היא</span> מאפשר/ת לעצמו/ה להביא את עצמו/ה כמו שהוא/היא, לעומת הצגת תדמית?' },
+                    { id: 'acceptance', title: 'קבלה עצמית', desc: 'האם יש חלקים בעצמו/ה שקשה לו/ה לקבל? האם <span class="name-display">היא</span> חש/ה בושה לגביהם?' },
+                    { id: 'intuition', title: 'אמון באינטואיציה', desc: 'האם <span class="name-display">היא</span> נוטה להיות אנליטי/ת מדי ולזלזל בתחושות הבטן שלו/ה? האם יש לו/ה ספק עצמי רב?' },
+                    { id: 'needs', title: 'מילוי הצרכים האישיים', desc: 'עד כמה <span class="name-display">היא</span> מכבד/ת את הצרכים שלו/ה, או נוטה "לוותר עליהם" כשהם מתנגשים עם רצון אחרים? האם <span class="name-display">היא</span> מתקשר/ת את הצרכים שלו/ה או יודע/ת לשים גבולות לאחרים?' },
+                    { id: 'direct', title: 'תקשורת ישירה והלימה', desc: 'האם <span class="name-display">היא</span> מתקשר/ת באופן פתוח ותואם, או שולח/ת מסרים כפולים (למשל, חיוך בעת כעס)?' },
+                    { id: 'approval', title: 'צורך באישור', desc: 'עד כמה הצורך שלו/ה בקבלה ואישור חזק עד כדי כך ש<span class="name-display">היא</span> "מוותר/ת על עצמו/ה"?' }
                 ]
             },
             {
@@ -317,11 +317,11 @@
                 title: 'קטגוריה 2: בניית מערכות יחסים',
                 color: 'indigo',
                 items: [
-                    { id: 'others_acceptance', title: 'קבלת האחר', desc: 'עד כמה <span class="name-display">היא</span> מקבלת אחרים, במיוחד אלו עם התנהגויות או ערכים שונים? האם <span class="name-display">היא</span> נוטה לשיפוטיות?' },
-                    { id: 'empathy', title: 'אמפתיה', desc: 'כמה קל לה לחוש אמפתיה לאחרים? האם <span class="name-display">היא</span> מצליחה להבין אנשים שונים ממנה?' },
-                    { id: 'confronting', title: 'עימות עם אחרים', desc: 'האם יש התנהגויות של אחרים שמפריעות לה אך קשה לה להעלות ולהציף אותן?' },
-                    { id: 'conflict', title: 'ניהול קונפליקטים', desc: 'האם קשה לה עם קונפליקטים? האם <span class="name-display">היא</span> נוטה להיתקע בהם? האם <span class="name-display">היא</span> פועלת לפתרון הדדי?' },
-                    { id: 'influence', title: 'יכולת השפעה', desc: 'האם <span class="name-display">היא</span> מוותרת על הכוח שלה? או להפך, דוחפת את דעתה חזק מדי ומתנגדת להשפעה של אחרים?' }
+                    { id: 'others_acceptance', title: 'קבלת האחר', desc: 'עד כמה <span class="name-display">היא</span> מקבל/ת אחרים, במיוחד אלו עם התנהגויות או ערכים שונים? האם <span class="name-display">היא</span> נוטה לשיפוטיות?' },
+                    { id: 'empathy', title: 'אמפתיה', desc: 'כמה קל לו/ה לחוש אמפתיה לאחרים? האם <span class="name-display">היא</span> מצליח/ה להבין אנשים שונים ממנו/ה?' },
+                    { id: 'confronting', title: 'עימות עם אחרים', desc: 'האם יש התנהגויות של אחרים שמפריעות לו/ה אך קשה לו/ה להעלות ולהציף אותן?' },
+                    { id: 'conflict', title: 'ניהול קונפליקטים', desc: 'האם קשה לו/ה עם קונפליקטים? האם <span class="name-display">היא</span> נוטה להיתקע בהם? האם <span class="name-display">היא</span> פועל/ת לפתרון הדדי?' },
+                    { id: 'influence', title: 'יכולת השפעה', desc: 'האם <span class="name-display">היא</span> מוותר/ת על הכוח שלו/ה? או להפך, דוחפ/ת את דעתו/ה חזק מדי ומתנגד/ת להשפעה של אחרים?' }
                 ]
             },
             {
@@ -329,10 +329,10 @@
                 title: 'קטגוריה 3: תהליך למידה',
                 color: 'purple',
                 items: [
-                    { id: 'risks', title: 'לקיחת סיכונים וטעויות', desc: 'נכונות להתנסות בהתנהגות חדשה. האם קל לה לקבל טעויות של עצמה? האם חשוב לה להציג מראית עין של צודקת, עד כדי כך שקשה לה להודות בטעות?' },
-                    { id: 'receiving_feedback', title: 'קבלת משוב', desc: 'האם <span class="name-display">היא</span> נפגעת בקלות ממשוב שלילי? הודפת משוב חיובי? האם <span class="name-display">היא</span> מתעלמת, "מתרסקת" מזה? עד כמה <span class="name-display">היא</span> לומדת ממשוב?' },
-                    { id: 'giving_feedback', title: 'מתן משוב', desc: 'עד כמה קל לה לתת משוב? האם <span class="name-display">היא</span> מייפה משוב שלילי? נמנעת ממשוב חיובי? האם נותנת את המשוב באלגנטיות או באופן מגושם?' },
-                    { id: 'help', title: 'בקשת/קבלת עזרה', desc: 'כמה קל לה לבקש או לקבל עזרה מאחרים בעת הצורך?' }
+                    { id: 'risks', title: 'לקיחת סיכונים וטעויות', desc: 'נכונות להתנסות בהתנהגות חדשה. האם קל לו/ה לקבל טעויות של עצמו/ה? האם חשוב לו/ה להציג מראית עין של צודק/ת, עד כדי כך שקשה לו/ה להודות בטעות?' },
+                    { id: 'receiving_feedback', title: 'קבלת משוב', desc: 'האם <span class="name-display">היא</span> נפגע/ת בקלות ממשוב שלילי? הודפ/ת משוב חיובי? האם <span class="name-display">היא</span> מתעלמ/ת, "מתרסק/ת" מזה? עד כמה <span class="name-display">היא</span> לומד/ת ממשוב?' },
+                    { id: 'giving_feedback', title: 'מתן משוב', desc: 'עד כמה קל לו/ה לתת משוב? האם <span class="name-display">היא</span> מייפה משוב שלילי? נמנע/ת ממשוב חיובי? האם נותנ/ת את המשוב באלגנטיות או באופן מגושם?' },
+                    { id: 'help', title: 'בקשת/קבלת עזרה', desc: 'כמה קל לו/ה לבקש או לקבל עזרה מאחרים בעת הצורך?' }
                 ]
             }
         ];
