--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
                 <td><a href="Efudix.html">Efudix</a></td>
             </tr>															
             <tr>
+                <td><a href="Color-Analyzer.html">Color Analyzer</a></td>
+            </tr>																		
+            <tr>
                 <td><a href="OBN-Text-to-Sig-Full.html">יצירת חתימה והוספה לתמונה או מסמך, גרסה 2</a></td>
             </tr>							
             <tr>
