--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
                 <td><a href="Color-Analyzer.html">Color Analyzer</a></td>
             </tr>																		
             <tr>
+                <td><a href="OBN-QR.html">QR Code Generator</a></td>
+            </tr>																		
+            <tr>
                 <td><a href="OBN-Text-to-Sig-Full.html">יצירת חתימה והוספה לתמונה או מסמך, גרסה 2</a></td>
             </tr>							
             <tr>
