--- a/Skills-Analize.html
+++ b/Skills-Analize.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>דשבורד ניתוח משובים 2 | סטנפורד</title>
+    <title>דשבורד ניתוח משובים | שאלון כישורים</title>
     
     <!-- ספריות עיצוב וגרפים -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -77,7 +77,7 @@
         <div class="max-w-5xl mx-auto px-4 py-4 flex justify-between items-center">
             <div class="flex items-center gap-3">
                 <i class="fas fa-chart-pie text-xl"></i>
-                <h1 class="text-xl font-bold leading-tight">ניתוח משובים קבוצתי (גרסה 2)</h1>
+                <h1 class="text-xl font-bold leading-tight">ניתוח משובים | שאלון כישורים</h1>
             </div>
             <button onclick="printReport()" class="text-sm bg-blue-800 hover:bg-blue-700 px-3 py-2 rounded-lg transition border border-blue-700 flex items-center gap-2">
                 <i class="fas fa-file-pdf"></i> הדפס / שמור כ-PDF
