--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <td><a href="TechnoTip.html">מאגר הטכנוטיפים</a></td>
             </tr>												
             <tr>
-                <td><a href="Keep-TechnoTip-Admin.html">ניהול מאגר הטכנוטיפים</a></td>
+                <td><a href="TechnoTip-Admin.html">ניהול מאגר הטכנוטיפים</a></td>
             </tr>															
             <tr>
                 <td><a href="Calendar-Creator.html">יוצר קישורים לאירועים</a></td>
