--- a/Skills-Analize-2.html
+++ b/Skills-Analize-2.html
@@ -290,14 +290,14 @@
                         <!-- Groq API Key Input -->
                         <div id="groq-key-container" class="hidden">
                             <label class="block text-sm font-bold text-gray-700 mb-2">Groq API Key:</label>
-                            <input type="password" id="groq-api-key" placeholder="gsk_..." class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none text-left" dir="ltr">
+                            <input type="password" id="groq-api-key" placeholder="הדביקו כאן את המפתח שלכם" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none text-left" dir="ltr">
                             <p class="text-xs text-gray-500 mt-2">המפתח נשמר בדפדפן שלך בלבד. <a href="https://console.groq.com/keys" target="_blank" class="text-blue-500 underline">להפקת מפתח Groq</a>.</p>
                         </div>
 
                         <!-- Google API Key Input -->
                         <div id="google-key-container" class="hidden">
                             <label class="block text-sm font-bold text-gray-700 mb-2">Google Gemini API Key:</label>
-                            <input type="password" id="google-api-key" placeholder="AIza..." class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none text-left" dir="ltr">
+                            <input type="password" id="google-api-key" placeholder="הדביקו כאן את המפתח שלכם" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none text-left" dir="ltr">
                             <p class="text-xs text-gray-500 mt-2">המפתח נשמר בדפדפן שלך בלבד. <a href="https://aistudio.google.com/app/apikey" target="_blank" class="text-blue-500 underline">להפקת מפתח Google</a>.</p>
                         </div>
                     </div>
@@ -905,12 +905,20 @@
             if (!window.__PRELOADED_DATA__) { saveSession(); }
         }
 
+        // --- Helper for Initials ---
+        function getInitials(name) {
+            if (!name || name === "לא ידוע" || name === "אנונימי") return "אנונימי";
+            const words = name.trim().split(/\s+/);
+            if (words.length === 1) return words[0].charAt(0);
+            return words[0].charAt(0) + words[words.length - 1].charAt(0);
+        }
+
         // --- Build AI Prompt ---
         function buildAIPrompt(subjectName, totalRespondents, itemStatsMap, general, special, barriers, dream) {
-            const name = subjectName && subjectName !== "לא ידוע" ? subjectName : 'המוערכת';
+            const subjectInitials = getInitials(subjectName);
             
             let promptText = `פעל כקואוצ'ר מלווה תהליכי צמיחה ויועץ מנהלים בכיר.
-להלן נתונים שנאספו מתוך שאלון משוב 360 עבור ${name} מ-${totalRespondents} משיבים שונים.
+להלן נתונים שנאספו מתוך שאלון משוב 360 עבורי (${subjectInitials}) מ-${totalRespondents} משיבים שונים.
 
 # נתונים כמותיים (מתוך רשימת כישורים):
 `;
@@ -930,39 +938,39 @@
             
             if (general.length > 0) {
                 promptText += `\nהערות כלליות והתנהגויות נוספות:\n`;
-                general.forEach(c => promptText += `* "${c.text}"\n`);
+                general.forEach(c => promptText += `* "${c.text}" (מאת: ${getInitials(c.author)})\n`);
             }
             if (special.length > 0) {
-                promptText += `\nאיכות מיוחדת / ערך מוסף ש-${name} מביאה לחדר:\n`;
-                special.forEach(c => promptText += `* "${c.text}"\n`);
+                promptText += `\nאיכות מיוחדת / ערך מוסף שאני מביא/ה לחדר:\n`;
+                special.forEach(c => promptText += `* "${c.text}" (מאת: ${getInitials(c.author)})\n`);
             }
             if (barriers.length > 0) {
-                promptText += `\nחסמים ופוטנציאל (מה עשוי לעכב אותה):\n`;
-                barriers.forEach(c => promptText += `* "${c.text}"\n`);
+                promptText += `\nחסמים ופוטנציאל (מה עשוי לעכב אותי):\n`;
+                barriers.forEach(c => promptText += `* "${c.text}" (מאת: ${getInitials(c.author)})\n`);
             }
             if (dream.length > 0) {
-                promptText += `\nתפקיד החלומות / המקום בו הכי נכון לה להיות:\n`;
-                dream.forEach(c => promptText += `* "${c.text}"\n`);
+                promptText += `\nתפקיד החלומות / המקום בו הכי נכון לי להיות:\n`;
+                dream.forEach(c => promptText += `* "${c.text}" (מאת: ${getInitials(c.author)})\n`);
             }
 
             promptText += `
 \n# המשימה שלך:
-המשימה שלך היא לערוך ניתוח הוליסטי ומפורט של שאלון הכישורים והתשובות הפתוחות לכדי דו"ח אסטרטגי מובנה, המדגיש את החוזקות, מפרק את החסמים ומשרטט את אופק הייעוד של ${name}. עליך לקבל את הנתונים האלה ולהתיך אותם לכדי דו"ח מובנה, המשמש הן את ${name} (המוערכת) והן את הקואוצ'ר המלווה אותה.
+המשימה שלך היא לערוך ניתוח הוליסטי ומפורט של שאלון הכישורים והתשובות הפתוחות לכדי דו"ח אסטרטגי מובנה, המדגיש את החוזקות, מפרק את החסמים ומשרטט את אופק הייעוד שלי. עליך לקבל את הנתונים האלה ולהתיך אותם לכדי דו"ח מובנה, המשמש אותי (המוערכ/ת) ואת הקואוצ'ר המלווה אותי.
 
 השתמש במקורות אלה להשראה לניתוח:
 1. Radical Candor (Kim Scott) - למתן משוב ישיר ומכבד.
-2. Blue Ocean Strategy - למציאת הייחודיות של ${name}.
-3. Systems Thinking - להבנת השפעתה על הארגון.
+2. Blue Ocean Strategy - למציאת הייחודיות שלי.
+3. Systems Thinking - להבנת ההשפעה שלי על הארגון.
 4. Psychological Safety (Amy Edmondson) - ליצירת מרחב לצמיחה.
 
 # כללי ברזל לכתיבת הדוח (חובה ליישם):
-* ציטוטים: עליך לצטט מתוך התשובות הפתוחות כדי לתקף ולבסס כל תובנה.
+* ציטוטים: עליך לצטט מתוך התשובות הפתוחות כדי לתקף ולבסס כל תובנה. שים לב ששמות המשיבים צומצמו לראשי תיבות לשם אנונימיות, התייחס אליהם בהתאם.
 * טון הדיבור: לעולם אל תשתמש בשפה ביקורתית או מקטינה; שמור על טון של "שותף לצמיחה", מעצים ומכבד.
 * מבנה: הימנע מרשימות מכולת יבשות; השתמש בחיבורים נרטיביים בין הסעיפים.
 * אמינות (Zero Hallucination): אל תמציא נתונים שלא מופיעים בתשובות הנתונות.
 * פרקטיקה: אל תיתן עצות גנריות; כל המלצה חייבת להיגזר ישירות מתוך המשוב הספציפי שעלה.
 
-השתמש בכותרות ברורות. נסח את הניתוח על ${name} בגוף שלישי נקבה.`;
+השתמש בכותרות ברורות. נסח את הניתוח בגוף ראשון (בלי מגדר).`;
 
             document.getElementById('ai-prompt').value = promptText;
         }
